Improving the Home layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home Page</h2>
+<div class="home-callout text-center container-fluid">
+	<h1>WELCOME TO DevMatch</h1>
+	<h3>A memmbeship site where entreprenuers can meet developers.</h3>
+</div>
