--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,7 @@ h1,h2,h3{
 	font-family: 'Calistoga', cursive;
 }
 
-body , .navbar{
+.navbar , .home-callout{
 		background: #2193b0;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -28,4 +28,12 @@ body , .navbar{
 }
 .navbar {
 	border:none;
+}
+.home-callout{
+	margin-top:-20px;
+	padding-top:50px;
+	padding-bottom :100px;
+}
+.home-callout h1{
+	color:white;
 }
