--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,3 +37,14 @@ h1,h2,h3{
 .home-callout h1{
 	color:white;
 }
+
+.navbar-default .navbar-brand ,
+.navbar-default .navbar-nav > li > a{
+	color:white;
+}
+
+.navbar-default .navbar-brand:hover ,
+.navbar-default .navbar-nav > li > a:hover{
+	color:white;
+	opacity:0.75;
+}
