Updated about page and logo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,11 @@ h1,h2,h3{
 .navbar {
 	border:none;
 }
+.navbar-brand{
+	font-family:'Calistoga', cursive ;
+	font-weight: 800;
+}
+
 .home-callout{
 	margin-top:-20px;
 	padding-top:50px;
