--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,15 @@ h1,h2,h3{
 	font-family:'Calistoga', cursive ;
 	font-weight: 800;
 }
+.navbar-default .navbar-toggle .icon-bar {
+	background-color: white;
+}
+.navbar-default .navbar-toggle {
+	border: 2px solid white;
+	&:hover, &:focus {
+	  background-color: #00c6ff;
+	}
+  }
 
 .home-callout{
 	margin-top:-20px;
