--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,20 @@
-<h1>Contact Form</h1>
+<div class="container">
+	<h3 class="text-center">Contact Us</h3>
+	
+	<!-- Ruby on rails contact form -->
+	<%= form_for "/contacts" do |f| %>
+		<%= f.label :Name %>
+		<%= f.text_field :name %>
+
+		<%= f.label :Email %>
+		<%= f.text_field :email %>
+
+		<%= f.label :Comments %>
+		<%= f.text_area :Comments %>
+
+		<%= f.submit 'Submit' %>
+
+	<% end %>
+
+
+</div>
