--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,20 +1,31 @@
 <div class="container">
-	<h3 class="text-center">Contact Us</h3>
-	
-	<!-- Ruby on rails contact form -->
-	<%= form_for "/contacts" do |f| %>
-		<%= f.label :Name %>
-		<%= f.text_field :name %>
 
-		<%= f.label :Email %>
-		<%= f.text_field :email %>
+	<div class="row">
+		<h3 class="text-center">Contact Us</h3>
+		<!-- Ruby on rails contact form -->
+		<div class="col-md-6 col-md-offset-3 ">
+			<div class="well">
+				<%= form_for "/contacts" do |f| %>
+					<div class="form-group">
+						<%= f.label :name %>
+						<%= f.text_field :name, class: 'form-control' %>
+					</div>
 
-		<%= f.label :Comments %>
-		<%= f.text_area :Comments %>
+					<div class="form-group">
+						<%= f.label :email %>
+						<%= f.text_field :email, class: 'form-control' %>
+					</div>
 
-		<%= f.submit 'Submit' %>
+					<div class="form-group">
+						<%= f.label :comments %>
+						<%= f.text_area :Comments, class: 'form-control' %>
+					</div>
 
-	<% end %>
+					<%= f.submit 'Submit',class: 'btn btn-primary' %>
 
+				<% end %>
+		    </div>
+	   </div>
+   </div>
 
 </div>
