--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,8 +4,9 @@
 		<h3 class="text-center">Contact Us</h3>
 		<!-- Ruby on rails contact form -->
 		<div class="col-md-6 col-md-offset-3 ">
+			<%= flash[:notice] %>
 			<div class="well">
-				<%= form_for "/contacts" do |f| %>
+				<%= form_for @contact do |f| %>
 					<div class="form-group">
 						<%= f.label :name %>
 						<%= f.text_field :name, class: 'form-control' %>
@@ -18,7 +19,7 @@
 
 					<div class="form-group">
 						<%= f.label :comments %>
-						<%= f.text_area :Comments, class: 'form-control' %>
+						<%= f.text_area :comments, class: 'form-control' %>
 					</div>
 
 					<%= f.submit 'Submit',class: 'btn btn-primary' %>
